--- a/CSS/style.css
+++ b/CSS/style.css
@@ -648,7 +648,12 @@ footer {
     transition: transform 250ms ease;
    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 }
+/*
 .box:hover .overlay {
+    transform: translateY(0);
+}*/
+.portfolio-list a:hover .overlay,
+.portfolio-list a:focus .overlay {
     transform: translateY(0);
 }
 
